--- a/summary.tex
+++ b/summary.tex
@@ -6,7 +6,7 @@
 
 \end{center}
 
-{\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности(?) сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
+{\em Глазунов~В.\,В., Курочкин~Л.\,М., Курочкин~М.\,А., Попов~С.\,Г.\/} \textbf{Исследование доступности сервисов мобильных пользователей облачно--ориентированой избыточной мультипротокольной сети автомобилей.}
 
 {\small
 Совокупность современных автомобилей, дорожной инфраструктуры и облачных информационных ресурсов образуют интеллектуальную транспортную сеть. Целью создания такой сети являются повышение безопасности и комфорта участников дорожного движения.
@@ -17,7 +17,7 @@
 
 Проблемой доступа к сервисам облачной среды является отсутствие непрерывно существующего выделенного беспроводного канала связи, что приводит к отказу в обслуживании. 
 
-%Канал передачи данных организуется при помощи автомобильных телематических устройств или персональных устройств пользователя, таких как смартфоны, лэптопы и общедоступные сотовые сети передачи данных.
+Канал передачи данных организуется при помощи автомобильных телематических устройств или персональных устройств пользователя, таких как смартфоны, лэптопы и общедоступные сотовые сети передачи данных.
 
 Решением, позволяющим улучшить качество доступа к сервисам облачной среды, является применение mesh сетей с мультипротокольными сетевыми интерфейсами, обеспечивающими передачу информационных сообщений средствами доступных сетей передачи данных.
 
@@ -36,6 +36,6 @@
 
 \end{center}
 
-{\em Glazunov~V.\,V., Kurochkin~L.\,M., Kurochkin~M.\,A., Popov~S.\,G.\/} \textbf{Article name Article name Article name.}
+{\em Glazunov~V.\,V., Kurochkin~L.\,M., Kurochkin~M.\,A., Popov~S.\,G.\/} \textbf{The research service availability of mobile users in cloud oriented multiprotocol network}
 
 {\small Text}
