--- a/telematics.tex
+++ b/telematics.tex
@@ -39,7 +39,7 @@
 
 \end{itemize}
 
-Возможными путями решения этих проблем являются:
+Путями решения этих проблем являются:
 \begin{itemize}
 
 \item[$-$] стандартизация частотного спектра передачи сигналов; 
