--- a/article_IP.tex
+++ b/article_IP.tex
@@ -1,10 +1,12 @@
-\documentclass[a5paper,10pt,oneside]{article}
+\documentclass[a5paper,10pt,oneside, final]{article}
 
 \usepackage[cp1251]{inputenc}
 
 \usepackage[english,russian]{babel}
 
 \usepackage[T2A]{fontenc}
+
+\usepackage{soul}
 
 % для правильного переноса url три пакета
 \usepackage{hyperref}
