--- a/research.tex
+++ b/research.tex
@@ -26,7 +26,7 @@
 
 {\bf{\SetMySubSection} Анализ результатов исследования.} Комбинации значений параметров применялись для реализации двух серий экспериментов: влияние протоколов маршрутизации на процент потерь при различных скоростях передачи данных и влияние скоростей транспортных средств и числа мультипротокольных узлов на потери сообщений при изменяемой скоростях передачи данных. 
 
-{\bf{\SetMySubSubSection} Влияние протоколов маршрутизации на потери сообщений.} Причиной появления отличий между реальной и максимально возможной скоростями передачи данных в mеsh является наличие служебного трафика, необходимого для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рис.~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к максимально возможной.
+{\bf{\SetMySubSubSection} Влияние протоколов маршрутизации на потери сообщений.} Причиной появления отличий между реальной и максимально возможной скоростями передачи данных в mеsh является наличие служебного трафика, необходимого для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рис.~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к максимально вёозможной.
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
@@ -47,9 +47,9 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Снижение фактической скорости составляет 5-37\%. Значительное падение реальной скорости передачи данных, до 37\%, наблюдается при скоростях передачи более 1024 Кб/сек. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наилучшие результаты демонстрирует протокол HWMP.
+Снижение фактической скорости составляет 5-37\%. Значительное падение фактической скорости передачи данных, до 37\%, наблюдается при скоростях передачи более 1024 Кб/сек, что связано с увеличением объёмов передаваемых данных, увеличением времени задержек в узлах, потере пути передачи сообщения, и как следствие необходимости обновления пути и увеличения доли служебного трафика. Наилучшие результаты на потоках большой интенсивности демонстрируют протоколы AODV, DSDV. Для передачи коротких сообщений с малой интенсивностью наилучшие результаты демонстрирует протокол HWMP.
 
-{\bf{\SetMySubSubSection} Влияние параметров движения транспортных средств и протоколов на потери сообщений.} Достоверность доставки сообщений оценивалась для наиболее сложных случаев существования сети, в которых изменение структуры сети происходит в течении 1 сек. Для данной ситуации характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. 
+{\bf{\SetMySubSubSection} Влияние параметров движения транспортных средств и протоколов на потери сообщений.} Достоверность доставки сообщений оценивалась для наиболее сложных случаев существования сети, в которых изменение структуры сети происходит в течении 1 с. Для данной ситуации характерна постоянная работа протоколов маршрутизации и процент потерь сообщений может быть значительным. 
 
 На рисунке рис.~\ref{fig:speed_lost} приведена зависимость процента потерянных сообщений, передаваемых от узла сети 802.11s к облачной среде от использованных протоколов беспроводной маршрутизации и размера сообщений. 
  
@@ -62,11 +62,11 @@
 % \vspace{-0.1cm}
 \end{figure}
 
-Потеря сообщений составила от 10 до 46\% от первоначального объёма. Потери растут с увеличением скорости передачи и при увеличении скорости передачи в два раза потеря сообщений увеличивается в три раза. Наибольшие потери сообщений возникают при использовании протокола OLSR, который не следует использовать для передачи потоковых данных без применения усложнённых механизмов передачи.
+Потеря сообщений составила от 10 до 46\% от первоначального объёма. Потери растут с увеличением скорости передачи и при увеличении скорости передачи в два раза потеря сообщений увеличивается в три раза, по причине увеличения объёма широковещательных сообщений в запросах на построение пути. Наибольшие потери сообщений возникают при использовании протокола OLSR, который не следует использовать для передачи потоковых данных без применения усложнённых механизмов передачи.
 
 {\bf{\SetMySubSubSection} Оценка времени отклика облачной среды.} Исследование среднего времени передачи сообщения от абонента к облаку определялась для сетей с 8 и 16 мобильными узлами, при использовании протокола маршрутизации HWMP. Ответное сообщение передавалось от стационарного узла LTE к мобильному абоненту по mesh сети.
 
-В перовом эксперименте серии проводилось исследование возможности доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s. В первом эксперименте определялся процент потерь сообщений от максимальной скорости движения автомобилей при разной плотности потока автомобилей оснащённых интерфейсом 802.11s.
+В перовом эксперименте серии проводилось исследование времени доставки экстренного сообщения от аварийного автомобиля до автомобиля, оснащённого интерфейсом LTE для передачи экстренного сообщения в облачную среду. Передача сообщения от аварийного автомобиля возможна при условии соединения аварийного автомобиля с мобильной mesh-сетью средствами 802.11s. В первом эксперименте определялся процент потерь сообщений от максимальной скорости движения автомобилей при разной плотности потока автомобилей оснащённых интерфейсом 802.11s.
  
 Для 8 узлов, что соответствует примерно 1 автомобилю на 100 метров проезжей части, среднее время доставки сообщения от абонента в облачную среду составило 70,41 мс; для 16 узлов --- 4,04 мс. Уменьшение времени доставки сообщений в сети с 16-ю узлами --- 2 автомобиля на 100 м проезжей части, связано возможностью построения дополнительных маршрутов передачи данных.
 
@@ -77,7 +77,7 @@
  \label{fig:alarm_densety}}
 \end{figure}
 
-Зависимость на рис.~\ref{fig:alarm_densety} показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы процент потерь составляет 78-92\%. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh, что позволит использовать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащённых передатчиками 802.11s, является использование альтернативной технологии передачи --- DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
+Зависимость на рис.~\ref{fig:alarm_densety} показывает, что при скорости движения автомобиля 100 миль в час и плотности движения 1 или 2 машины на 100 метров трассы процент потерь составляет 78-92\%. Причиной такого объёма потерь является короткое время нахождения автомобилей в зоне радиовидимости, что не позволяет построить путь для доставки сообщения в облачную среду. Из этого следует, что при таком режиме движения необходимо либо увеличивать плотность машин находящихся в радиусе действия передатчика mesh, что позволит использовать больше альтернативных путей доставки сообщений. Другим вариантом решения проблемы с небольшой плотностью машин, оснащённых передатчиками 802.11s, является использование альтернативной технологии передачи --- DSRC или использование прямых глобальных каналов точка-точка (LTE, WiMAX).
 
 Во втором эксперименте серии проводилось исследование возможности доставки сообщения от аварийного автомобиля, средствами 802.11s до хотя бы одного автомобиля оборудованного 802.11s и LTE на прямом участке 4-х полосного шоссе протяжённостью 800 метров. 
 
@@ -92,4 +92,4 @@
 
 На рис.~\ref{fig:alarm_speed} приведена зависимость процента потерь сообщений при плотности потока автомобилей, оснащённых интерфейсом 802.11s, --- 2 машины на 100 метров и при оснащённости потока автомобилей интерфейсом LTE на 25\%, 12\%, 6\%, 3\%.
 
-По результатам моделирования можно сделать вывод о том, что при оснащении устройствами LTE менее 25\% автомобилей процент потерь сообщений становится значительным уже при скорости 50 миль в час. В этом случае целесообразно использовать альтернативные протоколы отправки сообщений в облачную среду.
+По результатам моделирования можно сделать вывод о том, что при оснащении устройствами LTE менее 25\% автомобилей процент потерь сообщений становится значительным уже при скорости 50 миль в час, что вызвано разрушением построенных  путей передачи до окончания ретрансляции сообщений. В этом случае целесообразно использовать альтернативные протоколы отправки сообщений в облачную среду.
