Новая версия текста

--- a/cloud.tex
+++ b/cloud.tex
@@ -1,7 +1,5 @@
-{\bf{\SetMySection} Облачно--ориентированная избыточная мультипротокольная сеть.} Основной сложностью обеспечения передачи данных при использовании подвижного mesh стандарта 802.11s является динамическое изменение структуры сети, требующее использования дополнительных средств для поддержки маршрутизации сетевого трафика. Изменение доступных маршрутов передачи данных во время передачи сообщения приводит в увеличению времени передачи и, зачастую, к потере сообщения. Основными параметрами влияющими на свойства подвижной mesh--сети  передачи данных являются скорости движения объектов, взаимное расположение узлов сети, радиус действия передатчиков и время подключения к сети.
+{\bf{\SetMySection} Облачно--ориентированная избыточная мультипротокольная сеть.}Основной сложностью обеспечения передачи данных при использовании подвижного mesh стандарта 802.11s является динамическое изменение структуры сети, требующее использования дополнительных средств для поддержки маршрутизации сетевого трафика. Изменение доступных маршрутов передачи данных во время передачи сообщения приводит в увеличению времени передачи и, зачастую, к потере сообщения. Основными параметрами влияющими на свойства подвижной mesh--сети  передачи данных являются скорости движения объектов, взаимное расположение узлов сети, радиус действия передатчиков и время подключения к сети.
  
-Сегодня, для построения пути доступа к облачной среде используются классические алгоритмы поиска маршрутов mesh сетях\cite{Narra:2011:DDV:2151054.2151132}, которые предполагают поиск единственного маршрута до единственного заранее известного адресата. В случае облачно--ориентированного сервиса требуется осуществить выбор наиболее перспективного узла из нескольких альтернативных. Для этого необходимо выявить доступные узлы с выходом в облачную среду и оценить перспективность передачи и приёма данных через них.  
+Сегодня, для построения пути доступа к облачной среде используются классические алгоритмы поиска маршрутов mesh сетях, которые предполагают поиск единственного маршрута до единственного заранее известного адресата. В случае облачно-ориентированного сервиса требуется осуществить выбор наиболее перспективного узла из нескольких альтернативных. Для этого необходимо выявить доступные узлы с выходом в облачную среду и оценить перспективность передачи и приёма данных через них.  
 
 Важнейшими задачами построения такой сети является выбор вариантов использования протоколов маршрутизации и передачи данных для повышения достоверности передачи сообщений. Определение времени доставки сообщений к облачным сервисам и абонентам  сети в зависимости от интенсивности трафика движения автомобилей, трафика загрузки сети передачи данных, наличия и состава интерфейсов на автомобилях.
-
-В рамках представленного исследования рассматривается mesh сеть автомобилей частично оборудованных многоинтерфейсными передатчиками, обеспечивающими работу с различными сетями передачи данных.
