--- a/intro.tex
+++ b/intro.tex
@@ -1,4 +1,3 @@
 {\bf{\SetMySection}~Введение.} 
-Возросшие скорости движения,  расширение дорожной сети, повышение интенсивности движения, увеличение числа участников существенно повышает нагрузку на водителя современного транспортного средства, что негативно сказывается на безопасности дорожного движения. Одним из путей повышения безопасности является информирование водителя об окружающей дорожной обстановке с целью предупреждения и устранения потенциально опасных дорожных ситуаций. Источники большей части таких данных являются внешними, расположенными на существенном удалении от транспортного средства. В этом случае данные доставляются водителю посредством телематических сервисов. Постоянное увеличение числа сервисов требует перехода от концепции <<один сервис~--- один канал>> к формированию системы интеграции сервисов и формированию сети передачи данных с учётом автомобильной специфики, к которой относятся: разнородность и большое число источников данных, высокая частота запросов к сервисам и постоянное изменение состава абонентов сети.
-
-
+Возросшие скорости движения,  расширение дорожной сети, повышение интенсивности движения, увеличение числа участников существенно повышает нагрузку на водителя современного транспортного средства, что негативно сказывается на безопасности дорожного движения. Одним из путей повышения безопасности является информирование водителя об окружающей дорожной обстановке с целью предупреждения потенциально опасных дорожных ситуаций. 
+Оперативный доступ к актуальным данным о дорожной обстановке обеспечивается телематическими сервисами. Постоянное увеличение числа сервисов требует перехода от концепции <<один сервис~--- один канал>> к формированию системы интеграции сервисов и формированию сети передачи данных с учётом автомобильной специфики, к которой относятся: разнородность и большое число источников данных, высокая частота запросов к сервисам и постоянное изменение состава абонентов сети. Исследование разных комбинаций протоколов передачи данных в зависимости от состава сети  и объёмов передаваемых данных является актуальной задачей.
