--- a/research.tex
+++ b/research.tex
@@ -1,14 +1,14 @@
-{\bf{\SetMySection} Исследование.} Выбор значений параметров модели обусловлен необходимостью исследования mesh сети в наиболее динамичные периоды её существования, характеризующиеся коротким временем жизни, широким диапазоном интенсивности сетевого трафика, высокой частотой перераспределения маршрутов.
+{\bf{\SetMySection} Постановка экспериментов.}  Выбор значений параметров модели обусловлен необходимостью исследования mesh сети в наиболее динамичные периоды её существования, характеризующиеся коротким временем жизни, широким диапазоном интенсивности сетевого трафика, высокой частотой перераспределения маршрутов.
 
 {\bf{\SetMySubSection} Исходные данные для экспериментов.} Для проведения экспериментов выполнена настройка значений параметров:
 
 \begin{itemize}
 
-\item сети: 802.11s, LTE;
+\item тип сети: 802.11s, LTE;
 
-\item количество узлов сети: 4-16;
+\item число узлов сети: 4-16;
 
-\item фрагмент проезжей части: 800 м. с 4-я поворотами (90 градусов), движение двустороннее;
+\item параметры трассы: 800 м. с 4-я поворотами (90 градусов), движение двустороннее;
 
 \item скорость передачи данных: 8-2048 Кбит/сек;
 
@@ -22,9 +22,9 @@
 
 \end{itemize}
 
-С выбранными параметрами выполнена серия экспериментов по передаче экстренных сообщений между абонентами mesh-сети и облачной средой, позволяющая определить время доступности сервисов облачной среды для мобильных абонентов.
+С этими значениями параметров модели  параметрами были проведены 2 серии экспериментов по передаче экстренных сообщений между абонентами mesh-сети и облачной средой. В ходе экспериментов  определялось время доступности сервисов облачной среды для мобильных абонентов.
 
-{\bf{\SetMySubSection} Анализ результатов исследования.} Комбинации значений параметров применялись для реализации двух серий экспериментов: влияние протоколов маршрутизации на процент потерь при различных скоростях передачи данных и влияние скоростей транспортных средств и числа мультипротокольных узлов на потери сообщений при изменяемой скоростях передачи данных. 
+{\bf{\SetMySubSection} Анализ результатов исследований.} Комбинации значений параметров применялись для реализации двух серий экспериментов: влияние протоколов маршрутизации на процент потерь при различных скоростях передачи данных и влияние скоростей транспортных средств и числа мультипротокольных узлов на потери сообщений при изменяемой скоростях передачи данных. 
 
 {\bf{\SetMySubSubSection} Влияние протоколов маршрутизации на потери сообщений.} Причиной появления отличий между реальной и максимально возможной скоростями передачи данных в mеsh является наличие служебного трафика, необходимого для поддержки актуальности данных о состоянии топологии сети. Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рис.~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к максимально вёозможной.
  
