--- a/telematics.tex
+++ b/telematics.tex
@@ -1,4 +1,4 @@
-{\bf{\SetMySection} Телематические технологии доступа к сервисам.} Увеличение объёма двунаправленного потока сообщений, обеспечивающего информационную поддержку автомобильного движения формирует новые требования к обеспечению технологий информационного обмена в автомобильных сетях\cite{Road}.
+{\bf{\SetMySection} Телематические технологии доступа к сервисам.} 
 
 В настоящее время в автомобильных сетях активно используются беспроводные технологии передачи данных:
 
@@ -10,53 +10,10 @@
 
 \end{itemize}
 
-Они обеспечивают устойчивую связь автомобиля в зоне прямой видимости стационарной станции при скорости движения автомобиля до 120 км/ч. В зонах со сложным рельефом качество связи снижается, а при отсутствии передающих станций связь пропадает.
+Они обеспечивают устойчивую связь автомобиля в зоне прямой видимости стационарной станции при скорости движения автомобиля до 80 миль/ч. В зонах со сложным рельефом качество связи снижается, а при отсутствии передающих станций связь пропадает. В условиях высокой динамики автомобильной сети перспективной технологией взаимодействия абонентов является режим mesh, обеспечивающий процедуры самоорганизации абонентов.
 
-Ключевым вопросом является интеграция мобильных ресурсов с сервисами облачной среды, подразумевающая контакт со службами управления движением, сервиса, порталом производителя автомобиля, взаимодействие с соседними автомобилями без взаимодействия с глобальными сетями передачи данных.
+Для  передачи коротких сообщений между автомобилями и дорожной инфраструктурой используется беспроводная технология DSRC. Ее отличает короткое время соединения и радиус действия от 100 до 1500 метров. Наличие на борту автомобиля приёмопередатчика DSRC позволяет использовать этот канал для доступа к облачной среде, с целью повышения доступности сервисов.
 
-Беспроводные локальные сети подразделяются по топологии на: 
-\begin{itemize}
-
-\item[$-$] <<Точка-точка>> --- Peer to Peer или ADHOC;
-
-\item[$-$] <<Точка-многоточка>> --- Infrastructure mode;
-
-\item[$-$] <<Микросотовая сеть>> --- Wireless mesh.
-
-\end{itemize}
-
-В условиях высокой динамики автомобильной сети перспективной технологией взаимодействия абонентов является режим mesh, обеспечивающий процедуры самоорганизации абонентов.
-
-Реализация массовой мобильной беспроводной автомобильной сети передачи данных связано с решением ключевых проблем:
-
-\begin{itemize}
-
-\item[$-$] несовместимостью сетевого оборудования;
-
-\item[$-$] повышением издержек на внедрение новых технологий;
-
-\item[$-$] обеспечением надёжности и высокой скорости передачи сообщений.
-
-\end{itemize}
-
-Путями решения этих проблем являются:
-\begin{itemize}
-
-\item[$-$] стандартизация частотного спектра передачи сигналов; 
-
-\item[$-$] использование перспективных сетевых технологий: мобильный WiMAX, WiFi 802.11ac;
-
-\item[$-$] разработка протоколов формирования путей передачи данных;
-
-\item[$-$] разработка универсального реконфигурируемого устройства, адаптирующегося под конкретные каналы и протоколы передачи данных\cite{Seong-Youp}.
-
-\end{itemize}
-
-Современный автомобиль может поддерживать несколько устройств для подключения к локальным сетям одновременно, подключение осуществляется с использованием различных технологий, что усложняет конструкцию автомобиля и является препятствием на пути интеграции сервисов облачной среды.
-
-Перспективным направлением при передаче коротких сообщений между автомобилями и дорожной инфраструктурой является беспроводная технология соединения с автомобилями --- DSRC. В настоящее время стационарные передатчики дорожной инфраструктуры предназначены для трансляции на борт транспортного средства сообщений о дорожной обстановке. Преимуществом технологии является короткое время соединения между стационарными и подвижными передатчиками, высокая скорость передачи данных и поддержание стабильного соединения с транспортными средствами, движущимися на высоких скоростях. Объединение всех устройств в единую сеть обеспечивает непрерывное соединение транспортного средства с дорожной инфраструктурой. Наличие на борту автомобиля приёмопередатчика DSRC позволяет использовать этот канал для доступа к облачной среде, с целью повышения доступности сервисов.
-
-Большинство авторов не рассматривают ситуации, в которых отсутствует непрерывная связь со стационарными ретрансляторами, когда непосредственная передача данных невозможна. В тоже время, если рассматривать каждый автомобиль в качестве подвижного ретранслятора, то обмен сообщениями с облачной средой можно обеспечить путём ретрансляции сообщений через них. При наличии набора точек доступа к облачной среде возникает альтернатива выбора точки передачи сообщений в облачную среду.
 
 \begin{figure}[!ht]
  \centering{
@@ -67,9 +24,3 @@
 \end{figure}
 
 Связь с облаком осуществляться двумя путями: непосредственно автомобилем, оборудованным аппаратурой связи; через стационарный узел. Автомобиль, расположенный вне зоны связи может связаться с облаком через цепочку автомобилей-ретрансляторов. Сеть предусматривает двунаправленную передачу сообщений - от автомобиля в облако и обратно. Пример выбора альтернативных путей передачи сообщений с использованием mesh, DSRC и глобальных каналов связи на примере систем передачи экстренных сообщений систем <<ЭРА-ГЛОНАСС>> и <<eCall>> приведена на рис.~\ref{fig:ERA_GLONASS}.
-
-
-
-
-
-
