--- a/implementation.tex
+++ b/implementation.tex
@@ -1,22 +1,12 @@
-{\bf{\SetMySection}Реализация среды моделирования передачи сообщений в сети автомобилей.} Основным методом исследования времени доступности является имитационное моделирование функционирования абонентов сети в среде ns--3 (дискретно-событийный стимулятор телекоммуникационных систем\cite{Nsnam.org}).
- 
-Симулятор ns--3 является свободным программным обеспечением, распространяемым по лицензии GPL, он ориентирован на исследовательское применение, а так же применение в образовательных целях. Исходные коды ns--3 открыты для исследования, модификации и использования и доступны на сайте проекта\cite{Nsnam.org}. В качестве встроенного языка описания моделей используются: C++ и Python.
+{\bf{\SetMySection} Среда моделирования передачи сообщений в сети автомобилей.} 
+
+В качестве ядра среды моделирования использовался дискретно-событийный стимулятор телекоммуникационных систем ns--3\cite{Nsnam.org}. Симулятор ns--3 является свободным программным обеспечением, распространяемым по лицензии GPL. Исходные коды ns--3 открыты для исследования, модификации. В качестве встроенного языка описания моделей используются C++ и Python.
 
 В ns--3 разработаны модели как проводных, так и беспроводных сетей, позволяющие проводить моделирование смешанных сетей с топологиями различной сложности. Особый интерес в рамках данной работы представляет реализация mesh сетей на основе стека протоколов 802.11s.
 
 Для построения транспортной сети и моделирования движения транспорта применена модель движения транспорта Intelligent Driver Model (IDM)\cite{5678993}.
 
 Модель IDM описывает движение транспортного средства (ТС) по сети дорог, учитывая расположение ТС на полосах движения, габаритные размеры ТС, дистанцию между ТС, поведение ТС при смене полосы движения, направление движения полос, среднюю скорость движения и ускорение в заданной полосе, сигналы светофоров, распределение транспортных потоков на перекрёстках\cite{5678993}.
-
-{\bf{\SetMySubSection}Среда постановки эксперимента для мультипротокольной сети транспортных средств\cite{Instrumental}.} Для эффективного управления данными к среде моделирования были выдвинуты следующие требования:
-
-\begin{itemize}
-
-\item[$-$] параметры модели: число абонентов, расположение абонентов, характеристики движения, размер и интенсивность появления пакетов;
-
-\item[$-$] изменение протоколов маршрутизации;
- 
-\end{itemize}
 
 \begin{figure}[!ht]
 \vspace{-10pt}
@@ -33,23 +23,25 @@
 
 \begin{itemize}
 
-\item[$-$]Модель интерфейса 802.11s\cite{Andreev}. Реализация допускает применение протокола маршрутизации HWMP в режиме с использованием корневого узла и с построением маршрута передачи по запросу, кроме этого будут использованы протоколы маршрутизации для беспроводных mesh сетей: OLSR, AODV, DSDV.
--Реализации моделей протоколов маршрутизации в беспроводных сетях HWMP, OLSR, AODV, DSDV\cite{Narra:2011:DDV:2151054.2151132}.
+\item[$-$]Модель интерфейса 802.11s\cite{Andreev}. Реализация допускает применение протокола маршрутизации HWMP в режиме с использованием корневого узла и с построением маршрута передачи по запросу.
 
-\item[$-$]FlowMonitor --- модуль сбора и обработки статистики сетевого трафика, предоставляющий разнообразные методы сбора характеристик моделируемых сетевых устройств и каналов связи. 
+\item[$-$]Реализации моделей протоколов маршрутизации в беспроводных сетях HWMP, OLSR, AODV, DSDV\cite{Narra:2011:DDV:2151054.2151132}.
 
-\item[$-$]WireShark --- анализатор трафика компьютерных сетей, предоставляющий широкие возможности по фильтрации и сортировке данных трафика различных сетевых протоколов.
+\item[$-$] Модуль сбора и обработки статистики сетевого трафика, предоставляющий разнообразные методы сбора характеристик моделируемых сетевых устройств и каналов связи. 
+
+\item[$-$] Анализатор трафика компьютерных сетей, предоставляющий широкие возможности по фильтрации и сортировке данных трафика различных сетевых протоколов.
  
-\item[$-$]PyViz --- модуль визуализации моделей, позволяющий отображать топологию моделируемой сети, потоки данных, характеристики интерфейсов и каналов, а также их изменения на протяжении симуляции.
+\item[$-$] Модуль визуализации моделей, позволяющий отображать топологию моделируемой сети, потоки данных, характеристики интерфейсов и каналов, а также их изменения на протяжении симуляции.
 
 \end{itemize}
 
-Реализованная схема взаимодействия модулей позволяет комбинировать различные протоколы маршрутизации, сетевые интерфейсы, модели движения узлов сети. Параметры моделирования передаются в класс NetworkNodes, где происходит выбор и настройка протоколов маршрутизации, создание нескольких сетевых интерфейсов, установка скорости передачи данных, числа передающих узлов и типа сетевого трафика. Результатом моделирования является набор xml-файлов сгенерированных модулем FlowMonitor.
+Предложенная схема взаимодействия модулей позволяет комбинировать протоколы маршрутизации, сетевые интерфейсы, модели движения узлов сети. Параметры моделирования передаются в класс NetworkNodes, где происходит выбор и настройка протоколов маршрутизации, создание нескольких сетевых интерфейсов, установка скорости передачи данных, числа передающих узлов и типа сетевого трафика. Результатом моделирования является набор xml-файлов сгенерированных модулем FlowMonitor.
  
 Для реализации комбинации беспроводных сетей разработана модель подвижного мультипротокольного узла с набором сетевых интерфейсов. Для реализации мультипротокольного узла добавлен новый класс, позволяющий комбинировать интерфейсы стандартов: 802.11abg, 802.11s, 802.11p, LTE. 
 
-{\bf{\SetMySubSection}Реализация мультипротокольного узла в среде моделирования.}
-Для проведения эксперимента была создана модель узла, позволяющая осуществлять доставку пакетов между интерфейсом mesh-сети для сетей 802.11s и интерфейсом LTE. Модель мультипротокольного узла реализована добавлением виртуального узла точка--точка, обеспечивающего передачу маршрутизируемых пакетов между интерфейсами 802.11s и LTE.
+{\bf{\SetMySubSection} Реализация мультипротокольного узла в среде моделирования.}
+Для проведения экспериментов разработана модель мультипротокольного узла, позволяющая осуществлять доставку пакетов между интерфейсом mesh-сети для сетей 802.11s и интерфейсом LTE. Модель мультипротокольного узла реализована добавлением виртуального узла точка--точка, обеспечивающего передачу маршрутизируемых пакетов между интерфейсами 802.11s и LTE.
+
 Модель узла реализующая функцию маршрутизации сообщений между сетями передачи данных 802.11s и LTE показана на рисунке~\ref{fig:multiprotocol_realisation}.
 
 \begin{figure}[!ht]
@@ -65,4 +57,4 @@
 
 Мультипротокольный узел связан с транспортным средством, его координаты  наследуются от координат автомобиля. Перемещение автомобиля осуществляется дискретно с интервалом 0.1 секунда, в течение всего периода моделирования.
 
-{\bf{\SetMySubSection}Параметры эксперимента.} Для проведения исследований разработана пакетная технология инициализации параметров моделирования, обеспечивающая изменения значений параметров модели, к которым относятся:  изменение скорости и траектории движения; протокол маршрутизации; тип транспортного протокола передачи данных; скорость передачи данных; число узлов сети; количество узлов ведущих одновременную передачу; размер передаваемых пакетов; процент потерь пакетов в канале. В процессе моделирования для каждого узла регистрируется: время отправки пакета, время получения пакета, число потерянных пакетов, число отправленных пакетов, размер пакетов, IP адреса источников и получателей сообщений. Данные сохраняются в XML файл и доступны для последующего анализа.
+Для проведения исследований разработана пакетная технология инициализации параметров моделирования, обеспечивающая изменения значений параметров модели, к которым относятся:  изменение скорости и траектории движения; протокол маршрутизации; тип транспортного протокола передачи данных; скорость передачи данных; число узлов сети; количество узлов ведущих одновременную передачу; размер передаваемых пакетов; процент потерь пакетов в канале. В процессе моделирования для каждого узла регистрируется: время отправки пакета, время получения пакета, число потерянных пакетов, число отправленных пакетов, размер пакетов, IP адреса источников и получателей сообщений. Данные сохраняются в XML файл и доступны для последующего анализа.
