Добавлены ссылкина источники

--- a/telematics.tex
+++ b/telematics.tex
@@ -10,7 +10,7 @@
 
 \end{itemize}
 
-Они обеспечивают устойчивую связь автомобиля в зоне прямой видимости стационарной станции при скорости движения автомобиля до 80 миль/ч. В зонах со сложным рельефом качество связи снижается, а при отсутствии передающих станций связь пропадает. В условиях высокой динамики автомобильной сети перспективной технологией взаимодействия абонентов является режим mesh, обеспечивающий процедуры самоорганизации абонентов.
+Они обеспечивают устойчивую связь автомобиля в зоне прямой видимости стационарной станции при скорости движения автомобиля до 80 миль/ч. В зонах со сложным рельефом качество связи снижается, а при отсутствии передающих станций связь пропадает. В условиях высокой динамики автомобильной сети перспективной технологией взаимодействия абонентов является режим mesh, обеспечивающий процедуры самоорганизации абонентов\cite{Road}.
 
 Для  передачи коротких сообщений между автомобилями и дорожной инфраструктурой используется беспроводная технология DSRC. Ее отличает короткое время соединения и радиус действия от 100 до 1500 метров. Наличие на борту автомобиля приёмопередатчика DSRC позволяет использовать этот канал для доступа к облачной среде, с целью повышения доступности сервисов.
 
