--- a/auto.tex
+++ b/auto.tex
@@ -17,7 +17,7 @@
 
 \begin{enumerate}
 
-\item[$-$] оперативную помощь в сложных или аварийных ситуациях (отправка сообщений <<SOS>>, сообщений о ДТП, Сообщения о чрезвычайных ситуациях);
+\item[$-$] оперативную помощь в сложных или аварийных ситуациях (отправка сообщений <<SOS>>, сообщений о ДТП, Сообщения о чрезвычайных ситуациях)\cite{Ford.co.uk};
 
 \item[$-$] мониторинг обстановки на трассе движения (сообщение о погодных условиях и состоянии дорожного покрытия, оперативные изменения в транспортной сети, сообщения о правилах регулирования дорожного движения, сбор и отображение данных о местоположении автомобилей других участников движения);
 
