--- a/article_IP.tex
+++ b/article_IP.tex
@@ -6,6 +6,9 @@
 
 \usepackage[T2A]{fontenc}
 
+% возможна кириллица из другого пакета
+%\usepackage{pscyr}
+
 \usepackage{soul}
 
 % для правильного переноса url три пакета
@@ -15,9 +18,6 @@
 
 %для цитат
 \usepackage{cite}
-
-% кириллица из другого пакета
-%\usepackage{pscyr}
 
 %графика и её размещение
 \usepackage{epsfig}
