--- a/authors.tex
+++ b/authors.tex
@@ -18,7 +18,7 @@
 
 \vskip 1mm
 
-\noindent{\bf Курочкин Михайл Александрович}~--- к.т.н.; профессор кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). Область научных интересов: машинная графика, человеко-машинный интерфейс, компьютерное моделирование, компьютерные сети. Число научных публикаций --- 130. kurochkin.m@gmail.com; СПбГПУ, Политехническая, д. 29, г. Санкт-Петербург, 195251, РФ; р.т. +7(812)552-65-21. 
+\noindent{\bf Курочкин Михаил Александрович}~--- к.т.н.; профессор кафедры <<Телематика (при ЦНИИ РТК)>> института прикладной математики и механики (ИПММ) Санкт-Петербургского государственного политехнического университета (СПбГПУ). Область научных интересов: машинная графика, человеко-машинный интерфейс, компьютерное моделирование, компьютерные сети. Число научных публикаций --- 130. kurochkin.m@gmail.com; СПбГПУ, Политехническая, д. 29, г. Санкт-Петербург, 195251, РФ; р.т. +7(812)552-65-21. 
 
 \vskip 1mm
 
