--- a/summary.tex
+++ b/summary.tex
@@ -34,6 +34,6 @@
 
 \end{center}
 
-{\em Glazunov~V.\,V., Kurochkin~L.\,M., Kurochkin~M.\,A., Popov~S.\,G.\/} \textbf{The research service availability of mobile users in cloud oriented multiprotocol network}
+{\em Glazunov~V.\,V., Kurochkin~L.\,M., Kurochkin~M.\,A., Popov~S.\,G.\/} \textbf{The research service availability of mobile users in cloud oriented multiprotocol network.}
 
 {\small Text}
