--- a/telematics.tex
+++ b/telematics.tex
@@ -23,4 +23,4 @@
 }
 \end{figure}
 
-Связь с облаком осуществляться двумя путями: непосредственно автомобилем, оборудованным аппаратурой связи; через стационарный узел. Автомобиль, расположенный вне зоны связи может связаться с облаком через цепочку автомобилей-ретрансляторов. Сеть предусматривает двунаправленную передачу сообщений - от автомобиля в облако и обратно. Пример выбора альтернативных путей передачи сообщений с использованием mesh, DSRC и глобальных каналов связи на примере систем передачи экстренных сообщений систем <<ЭРА-ГЛОНАСС>> и <<eCall>> приведена на рис.~\ref{fig:ERA_GLONASS}.
+Связь с облаком осуществляться двумя путями: непосредственно автомобилем, оборудованным аппаратурой связи; через стационарный узел. Автомобиль, расположенный вне зоны связи может связаться с облаком через цепочку автомобилей-ретрансляторов. Сеть предусматривает двунаправленную передачу сообщений~--- от автомобиля в облако и обратно. Пример выбора альтернативных путей передачи сообщений с использованием mesh, DSRC и глобальных каналов связи на примере систем передачи экстренных сообщений систем <<ЭРА-ГЛОНАСС>> и <<eCall>> приведен на рис.~\ref{fig:ERA_GLONASS}.
