--- a/research.tex
+++ b/research.tex
@@ -22,11 +22,11 @@
 
 \end{itemize}
 
-С этими значениями параметров модели  параметрами были проведены 2 серии экспериментов по передаче экстренных сообщений между абонентами mesh-сети и облачной средой. В ходе экспериментов  определялось время доступности сервисов облачной среды для мобильных абонентов.
+С этими значениями параметров модели  были проведены 2 серии экспериментов по передаче экстренных сообщений между абонентами mesh-сети и облачной средой. В ходе экспериментов  определялось время доступности сервисов облачной среды для мобильных абонентов.
 
 {\bf{\SetMySubSection} Анализ результатов исследований.} Комбинации значений параметров применялись для реализации двух серий экспериментов: влияние протоколов маршрутизации на процент потерь при различных скоростях передачи данных и влияние скоростей транспортных средств и числа мультипротокольных узлов на потери сообщений при изменяемой скоростях передачи данных. 
 
-{\bf{\SetMySubSubSection} Влияние протоколов маршрутизации на потери сообщений.}  Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рис.~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к максимально вёозможной.
+{\bf{\SetMySubSubSection} Влияние протоколов маршрутизации на потери сообщений.}  Исследование фактической скорости передачи данных осуществлялось для разных протоколов маршрутизации и малом времени существования сети. Рассмотрены протоколы маршрутизации OLSR, DSDV, AODV, HWMP. В эксперименте использовался UDP трафик передаваемый со скоростями 8, 32, 64, 128, 512, 1024, 2048 Кбит/сек. Зависимости фактической скорости передачи данных от используемого протокола маршрутизации и интенсивности трафика представлены на рис.~\ref{fig:speed_protocol}. На рис.~\ref{fig:speed_fact} показано отношение фактической скорости передачи данных к максимально возможной.
  
 \begin{figure}[!ht]
 % \vspace{-0.2cm}
